@@ -2,7 +2,7 @@
 #include "datatypes.h"
 #include <stdlib.h>
 #include <stdio.h>
-
+#include <string.h>
 
 
 /*
